--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>Learn SAP</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+<p>This is a beginners journey through the steep learning curve of SAP, utilising SAP resources for ECC6 and then reviewing changes in SAP S/4HANA.</p>
+<h4>25/03/2020 - hello world</h4>
+<p>I am an accountant that is working on a SAP S/4HANA design and implementation project in the UK and am using the opportunity to look under the hood of SAP an learn as much as I can about the configuration of this ERP system to support my understanding of design decisions and to enable me to provide a better service to the end client.</p>
+<h5>Desired outcomes</h5>
+<p>In the sandbox system that is available to my team, I wan to be able to configure the system to evidence our core design decisions for:</p>
+<ol>
+<li>Sales &amp; Distribution (SD)</li>
+<li>Finance (FI)</li>
+
+</ol>
+<h5>Timeline</h5>
+<p>My current contract is due to expire at the end of August 2020 and so this seems to be an appropriate time deadline. For SD learning, I would like to complete my learning guide by 29 May 2020. I will use the remaining three months to complete my learning resources for FI.</p>
+<p>Lets see how this goes...</p>
 
 </body>
 </html>
