--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
+<h1>Learn SAP</h1>
 <body>
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>This is a beginners journey through the steep learning curve of SAP, utilising SAP resources for ECC6 and then reviewing changes in SAP S/4HANA.</p>
