--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Learn SAP</title>
+  <title>SAP Notes</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<h1>Learn SAP</h1>
+<h1>SAP Notes</h1>
 <body>
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>This is a beginners journey through the steep learning curve of SAP, utilising SAP resources for ECC6 and then reviewing changes in SAP S/4HANA.</p>
